Disparonote Frontend/my-next-app/app/components/TokenTimer/TokenTimer.css
.token-timer-container {
  position: fixed;
  top: 15px;
  right: 20px;
  padding: 10px 15px;
  background-color: #000000;
  color: white;
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
  font-size: 14px;
  font-weight: bold;
  display: flex;
  align-items: center;
  gap: 8px;
  transition: all 0.3s ease;
}

.token-timer-container:hover {
  transform: scale(1.05);
  background-color: #000000;
}

.tokenIcon {
  color: rgb(255, 249, 249);
  font-size: 18px;
}

